CHANGE: Core  | persistent IP bans now have limited lifetime [Parg]
CHANGE: Core  | reworked compact storage type to support migration of formats [Parg]
CHANGE: Core  | less requirements to pause downloads when changing file priorities [Parg]
CHANGE: Core  | only 1 torrent can now be checking at a time [Parg]
CHANGE: Core  | DHT size estimation improved [Parg]

BUGFIX: Core  | Fix transfer stall bug when MTU size is greater than max upload/download rate [Nolar]
BUGFIX: UI    | Selection moves properly with CTRL+<UP,DOWN,HOME,END> and sorting [TuxPaper]
BUGFIX: UI    | URL Drag'nDrop Improvements - Unicode, IE Links (Windows) [TuxPaper]
BUGFIX: Core  | Improved peer connection counting [Parg]
BUGFIX: Core  | Tracker wasn't handling "accept-encoding" properly [Parg]
BUGFIX: Core  | Multiple file renames/retargets wasn't working [Parg]
BUGFIX: Core  | synchronous scrape wasn't working [Parg]
BUGFIX: Core  | fixed move-on-complete bug when target was a link [Parg]

2005.11.22 | Azureus 2.3.0.6

FEATURE: Core | Built in tracker support for multiple listen ports [Parg]
FEATURE: Core | Tracker support for multi-hash scrapes [Parg]
FEATURE: Core | "Date added" field added for hosted torrents [Parg]
FEATURE: Core | Alternate max upload rate limit when only seeding option [Nolar]
FEATURE: Core | Ability to move a download's data files and torrent added [Parg]
FEATURE: Core | Added ability to turn off DHT originated IP Filter violation logs [Parg]
FEATURE: Core | When a peer is banned remove any data downloaded from it in partially complete pieces [Parg]
FEATURE: Core | Added "block banning" feature when multiple bad peers found with "close" IPs [Parg]
FEATURE: Core | Support for platform-specific plugin update components [Parg]
FEATURE: Core | Support for .torrent file download using just infohash hex string (via DHT magnet lookup mechanism) [Nolar]
FEATURE: Core | Added some control over initial share ratio for "add for seeding" downloads [Parg]